--- a/package.json
+++ b/package.json
@@ -1,8 +1,44 @@
 {
   "name": "react-floating-actions",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "A beautiful, customizable floating action button component for React with support for multiple platforms and animations",
   "type": "module",
+  "main": "./dist/floating-actions.umd.js",
+  "module": "./dist/floating-actions.es.js",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/floating-actions.es.js",
+      "require": "./dist/floating-actions.umd.js"
+    },
+    "./css": "./dist/style.css"
+  },
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "react",
+    "floating-action-button",
+    "fab",
+    "component",
+    "typescript",
+    "whatsapp",
+    "telegram",
+    "contact",
+    "actions",
+    "animations"
+  ],
+  "author": "Matan Baruch",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MatanB27/react-floating-actions"
+  },
+  "homepage": "https://github.com/MatanB27/react-floating-actions/blob/main/README.md",
+  "bugs": {
+    "url": "https://github.com/MatanB27/react-floating-actions/issues"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
