--- a/.npmignore
+++ b/.npmignore
@@ -3,25 +3,16 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 
 # Development files
+demo/
 src/
-*.ts
-!dist/types/**/*.ts
-*.tsx
 .vscode/
 .idea/
 
 # Build and config
 vite.config.ts
-tsconfig.json
-tsconfig.app.json
-tsconfig.node.json
-eslint.config.js
-index.html
-
-# Git
-.git/
 .gitignore
 
 # Demo and test files
